       sufficient deprecation notice (ZODB 3.6 properly removed it, but
       Zope needs to keep it for another release).

     - Several zope.app packages were forgotten to be included in the
       first beta due to the now zpkg-based build and release process.

    Features added

     - The SiteErrorLog now copies exceptions to the event log by default.

  Zope 2.9.0 beta 1 (2005/12/06)

    Features added

      - ObjectManager now has an hasObject method to test presence. This
        brings it in line with BTreeFolder.

      - Using FastCGI is officially deprecated

      - Improved logging of ConflictErrors. All conflict errors are
        logged at INFO, with counts of how many occurred and how many
        were resolved. Tracebacks for all conflicts are logged a DEBUG
        level, although these won't help anyone much. If a conflict
        error is unresolved, it will now bubble up to error_log and
        standard_error_message.

      - Fixed unclear security declarations. Warn when an attempt is
        made to have a security declaration on a nonexistent method.

      - updated to ZPL 2.1

      - interfaces: Added 'Interfaces' tab to basic core objects.
        This is a Five feature and only available if the classes are made
        five:traversable. It allows to inspect interfaces and to assign
        marker interfaces through the ZMI.

      - webdav: Added support for the z3 WriteLock interface.
        It is no longer necessary to have the WriteLockInterface in the
        __implements__ list of lockable objects. All classes inheriting from
        LockableItem inherit also the IWriteLock interface. Note that this
        enables webdav locking for all subclasses by default even if they
        don't specify the WriteLockInterface explicitly.

      - App ProductContext: Made registerClass aware of z3 interfaces.
        Z2 and z3 interfaces are registered side by side in the same tuple in